<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en_US">
    <string name="app_name">Slots</string>
    <string name="app_name_lite">Slots Lite</string>
    <string name="app_name_basic">Slots Basic</string>
    <string name="app_name_pro">Slots Pro</string>
    <string name="app_name_elite">Slots Elite</string>
    <string name="app_name_basic_enhanced">Slots Basic Enhanced</string>
    <string name="app_name_pro_enhanced">Slots Pro Enhanced</string>
    <string name="app_name_elite_enhanced">Slots Elite Enhanced</string>
    <string name="app_name_noicon">Slots 00</string>
    <string name="app_name_sl">Guardian G4</string>
    <string name="app_name_kmi99">KMI 99</string>
    <string name="app_name_fun">Fun Slots</string>
    <string name="app_name_weather">Weather</string>
    <string name="app_name_pin">Fun Pin</string>
    <string name="app_name_deputizeamerica">Deputize America</string>
    <string name="app_name_jdar">1789</string>
    <string name="app_name_maps">Maps</string>
    <string name="tab_collect">Collect</string>
    <string name="tab_chat">Messenger</string>
    <string name="tab_map">Map</string>
    <string name="tab_poi">POI</string>
    <string name="tab_alerts">Alerts</string>
    <string name="tab_media">Team Collects</string>
    <string name="tab_atcommands">AT Commands</string>
    <string name="tab_markalert">Mark/Alert</string>
    <string name="tab_status">Status</string>
    <string name="tab_configuration">Configuration</string>
    <string name="tab_home">Home</string>
    <string name="tab_checkin">Check-in</string>
    <string name="tab_timer">Timer</string>
    <string name="tab_contacts">Contacts</string>
    <string name="drawer_chat">Messenger</string>
    <string name="drawer_collect">Data Collect</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_alerts">Alerts</string>
    <string name="drawer_boss_mode">Boss Mode</string>
    <string name="drawer_media">Team Collects</string>
    <string name="drawer_poi">Points of Interest</string>
    <string name="drawer_settings">Registration</string>
    <string name="drawer_preferences">Preferences</string>
    <string name="drawer_wipe_data">Wipe Data</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_checkin">Check-in</string>
    <string name="drawer_timer">Timer</string>
    <string name="drawer_contacts">Contacts</string>
    <string name="chat">Messenger</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="settings">Registration</string>
    <string name="preferences">Preferences</string>
    <string name="android_too_old">This application requires Android 4.3 or higher.</string>
    <string name="admin_activity">Device Administration</string>
    <string name="success_title">Success</string>
    <string name="error_title">Error</string>
    <string name="scan_settings">Barcode Scan</string>
    <string name="scan_completed">The settings scan completed successfully.</string>
    <string name="grant_rights">You must grant this application administrative rights in order to continue.</string>
    <string name="public_broadcast">Broadcast to all</string>
    <string name="general_chat">General Chat</string>
    <string name="existing">Existing</string>
    <string name="not_while_recording">You may not change the capture mode while recording.</string>
    <string name="camera_unavailable">The currently selected camera could not be opened.</string>
    <string name="case_information">Cases</string>
    <string name="case_number">Case Number</string>
    <string name="case_description">Case Description</string>
    <string name="select_media">Select Media</string>
    <string name="same_as_fix_interval">Same as Fix Interval</string>
    <string name="maximum_tracking">Max Tracking Time</string>
    <string name="fde_unavailable">Android Full Disk Encryption is not supported on this device.</string>
    <string name="wipe_notice">A remote wipe has been triggered.</string>
    <string name="video_streaming_quality">Video Streaming Quality</string>
    <string name="language">Language</string>
    <string name="language_changed">Language Changed</string>
    <string name="language_restart">Please restart the application or reboot the device for your new language settings to fully take effect.</string>
    <string name="error">Error</string>
    <string name="error_occurred">An error has occurred.</string>
    <string name="language_description">If you need a different language, select it below.</string>
    <string name="wipe_confirmation">Unregister application and delete all unsent data.</string>
    <string name="user_offline">User Offline</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="center_barcode">Center the barcode.</string>
    <string name="tap_to_focus">Tap to focus.</string>
    <string name="avoid_glare">Avoid glare and shadows.</string>
    <string name="_yes_">YES</string>
    <string name="_no_">NO</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="allow_live_tracking">Allow Tracking</string>
    <string name="allow_live_tracking_">Allow Tracking?</string>
    <string name="allow_live_tracking_description">This requires turning on the Allow Tracking preference.</string>
    <string name="phone_title">Collect</string>
    <string name="phone_recordcalls">Record Phone Calls</string>
    <string name="phone_sms">Collect SMS Logs</string>
    <string name="phone_sms_delivery">SMS Log Delivery Interval</string>
    <string name="phone_phonelogs">Collect Phone Logs</string>
    <string name="phone_phonelog_delivery">Phone Log Delivery Interval</string>
    <string name="phoneCalls_none">Off</string>
    <string name="phoneCalls_outgoing">Outgoing</string>
    <string name="phoneCalls_incoming">Incoming</string>
    <string name="phoneCalls_both">Both</string>
    <string name="sms_delivery_immediately">Immediately</string>
    <string name="sms_delivery_30seconds">30 Seconds</string>
    <string name="sms_delivery_1minute">1 Minute</string>
    <string name="sms_delivery_5minutes">5 Minutes</string>
    <string name="sms_delivery_15minutes">15 Minutes</string>
    <string name="sms_delivery_30minutes">30 Minutes</string>
    <string name="sms_delivery_60minutes">60 Minutes</string>
    <string name="sms_delivery_2hours">2 Hours</string>
    <string name="sms_delivery_4hours">4 Hours</string>
    <string name="sms_delivery_6hours">6 Hours</string>
    <string name="sms_delivery_12hours">12 Hours</string>
    <string name="sms_delivery_24hours">24 Hours</string>
    <string name="phoneLog_delivery_immediately">Immediately</string>
    <string name="phoneLog_delivery_30seconds">30 Seconds</string>
    <string name="phoneLog_delivery_1minute">1 Minute</string>
    <string name="phoneLog_delivery_5minutes">5 Minutes</string>
    <string name="phoneLog_delivery_15minutes">15 Minutes</string>
    <string name="phoneLog_delivery_30minutes">30 Minutes</string>
    <string name="phoneLog_delivery_60minutes">60 Minutes</string>
    <string name="phoneLog_delivery_2hours">2 Hours</string>
    <string name="phoneLog_delivery_4hours">4 Hours</string>
    <string name="phoneLog_delivery_6hours">6 Hours</string>
    <string name="phoneLog_delivery_12hours">12 Hours</string>
    <string name="phoneLog_delivery_24hours">24 Hours</string>
    <string name="fix_day_interval">Daytime Fixes</string>
    <string name="fix_night_interval">Nighttime Fixes</string>
    <string name="fix_panic_interval">Fixes During Panic</string>
    <string name="reporting_interval">Reporting Interval</string>
    <string name="maximum">Maximum</string>
    <string name="ping_interval">Ping Interval</string>
    <string name="default_screen">Default Screen</string>
    <string name="image_quality">Quality</string>
    <string name="image_size">Size</string>
    <string name="video_quality">Quality</string>
    <string name="video_size">Size</string>
    <string name="video_cases">Video Cases</string>
    <string name="include_audio">Include Audio</string>
    <string name="storage">Storage</string>
    <string name="use_external">Use External</string>
    <string name="best_for_connection">Best for Connection</string>
    <string name="low_3g">Low (3G)</string>
    <string name="medium_wifi">Medium (WiFi)</string>
    <string name="high_maximum">High (Maximum)</string>
    <string name="s352_288">352x288</string>
    <string name="s640_480">640x480</string>
    <string name="s960_540">960x540</string>
    <string name="s1280_720">1280x720 (720p)</string>
    <string name="s1920_1080">1920x1080 (1080p)</string>
    <string name="video_framerate">Frame Rate</string>
    <string name="recording_cancelled">Recording Cancelled</string>
    <string name="insufficient_space">There is insufficient space to carry out this operation.</string>
    <string name="ran_out_of_space">The recording has been automatically terminated as you have nearly exhausted the storage on the selected media.</string>
    <string name="hide_my_location">Hide My Location</string>
    <string name="show_agents">Others</string>
    <string name="show_cases">Media</string>
    <string name="show_details">Details</string>
    <string name="auto_track">Auto Track</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="reset_will_follow">A device factory reset will follow.</string>
    <string name="boss_label">Slots</string>
    <string name="boss_mode">Boss Mode</string>
    <string name="boss_mode_tap">Tap the button below to switch into boss mode.</string>
    <string name="slot_game_display">A slot machine game will display.</string>
    <string name="execute_boss_mode">Execute boss mode gesture to resume.</string>
    <string name="audio_live">Audio LIVE</string>
    <string name="video_live">Video LIVE</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="disabled">Disabled</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="message_queued">Queued For Later Delivery.</string>
    <string name="login">Log in</string>
    <string name="password__">Password</string>
    <string name="username__">Username</string>
    <string name="port__">Port</string>
    <string name="url__">URL</string>
    <string name="add_photo">Add Photo</string>
    <string name="update_location"><u>Update Location</u></string>
    <string name="init_panic_alert">INITIATING PANIC ALERT IN</string>
    <string name="release_panic_button">RELEASE BUTTON TO CANCEL</string>
    <string name="panic">Panic</string>
    <string name="call">Call</string>
    <string name="_911">911</string>
    <string name="dial_911">Dial 911</string>
    <string name="hold_3_seconds">Hold 3 Seconds</string>
    <string name="operations_center">Operations Center</string>
    <string name="unknown">Unknown</string>
    <string name="last_location_address">Last Location Address</string>
    <string name="panic_message">Your panic message has been received.</string>
    <string name="panic_initiated">PANIC INITIATED</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="next">Next</string>
    <string name="all_fields_required">All fields required</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_will_be_sent">An email will be sent with instructions on how to reset your password. Enter email or username and select ‘Next’.</string>
    <string name="_3">3</string>
    <string name="enter_your_login_credentials_and_select_log_in">Enter your login credentials and select‘Log in’.</string>
</resources>