<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/timberwolf"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabTitleBackColor">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/back"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabClickableTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabStaticTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/next"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabClickableTextColor" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_will_be_sent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/tabStaticTextColor" />

        <TextView
            android:id="@+id/urlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/url"
            android:text="@string/url__"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textAppearance="@android:style/TextAppearance.Small"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/portText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/port"
            android:text="@string/port__"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:lines="1"
            android:maxWidth="200dp"
            android:selectAllOnFocus="true"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <TextView
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/user"
            android:text="@string/email"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textAppearance="@android:style/TextAppearance.Small" />

    </LinearLayout>


</LinearLayout>
