<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/timberwolf"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabTitleBackColor">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/back"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabClickableTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabStaticTextColor"
            android:textStyle="bold" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_your_login_credentials_and_select_log_in"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/tabStaticTextColor" />

            <TextView
                android:id="@+id/urlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/url"
                android:paddingEnd="4dp"
                android:text="@string/url__"
                android:textAppearance="@android:style/TextAppearance.Small"
              tools:ignore="RtlSymmetry"/>

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Small"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/portText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/port"
                android:paddingEnd="4dp"
                android:text="@string/port__"
                android:textAppearance="@android:style/TextAppearance.Small"
              tools:ignore="RtlSymmetry"/>

            <EditText
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1"
                android:maxWidth="200dp"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/userText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/user"
                android:paddingEnd="4dp"
                android:text="@string/username__"
                android:textAppearance="@android:style/TextAppearance.Small"
              tools:ignore="RtlSymmetry"/>

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/password"
                android:paddingEnd="4dp"
                android:text="@string/password__"
                android:textAppearance="@android:style/TextAppearance.Small"
              tools:ignore="RtlSymmetry"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/all_fields_required"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <Button
                android:id="@+id/action"
                style="@style/Theme.Apptheme.BlueButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/forgot_password"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/tabClickableTextColor" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
