<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabContentBackColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:visibility="visible">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/unknown"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/tabStaticTextColor"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/photo_ring"
            android:scaleType="fitXY"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/add_photo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/tabClickableTextColor" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/panic_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tabTitleBackColor"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_panic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/tabClickableTextColor" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/panic_initiated"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/redorange"
            android:textStyle="bold" />

        <TextView
          android:id="@+id/panic_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/panic_message"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/redorange" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/last_location_address"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/tabStaticTextColor" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/tabClickableTextColor" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/unknown"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/tabClickableTextColor" />


                <TextView
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    android:text="@string/update_location"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/tabClickableTextColor" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/animation_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/init_panic_alert"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/redorange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/animation_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/redorange"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/release_panic_button"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/redorange" />

        <ImageView
            android:id="@+id/animation_image_odd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/panicringoddnumbers" />

        <ImageView
            android:id="@+id/animation_image_even"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/panicringevennumbers" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabTitleBackColor"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/call_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/nonemergency"
                android:background="@null"
                android:text="@string/call"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/callButtonTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/call_button_label"
                android:text="@string/operations_center"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/callButtonTextColor" />

        </LinearLayout>

        <View
            android:id="@+id/home_panic_filler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/panic_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/panic_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/panic"
                android:background="@null"
                android:text="@string/panic"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/panicButtonTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hold_3_seconds"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/panicButtonTextColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emergency_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/emergency_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/emergency"
                android:background="@null"
                android:text="@string/_911"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/panicButtonTextColor"
                android:textStyle="bold" />

            <TextView
              android:id="@+id/emergency_button_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dial_911"
              android:textAppearance="@android:style/TextAppearance.Small"
              android:textColor="@color/panicButtonTextColor" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>